--- a/USAeng.html
+++ b/USAeng.html
@@ -62,7 +62,7 @@
                 </td>
               </tr>
             </table>
-            <a href="country_info.html" ><button class="st1">Go on the main page</button></a>
+            <a href="index.html" ><button class="st1">Go on the main page</button></a>
             <a href="USA.html"><button class="st2"> Translate to russian</button></a>
       </body>
 </html>
